--- a/sigi/app/Resources/views/application/new.html.twig
+++ b/sigi/app/Resources/views/application/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>Resumen Aplicación a Oportunidad de Investigación</h2>
+    <h2>Resumen Postulación a Oportunidad de Investigación</h2>
 
 
     {{ form_start(form) }}
