--- a/sigi/app/Resources/views/application/index.html.twig
+++ b/sigi/app/Resources/views/application/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Lista de Aplicaciones</h1>
+    <h1>Lista de Postulaciones</h1>
 
     <table class="table table-striped">
         <thead>
@@ -15,7 +15,7 @@
                     <th>Mentor</th>
                 {% endif %}
                 <th>Estado</th>
-                <th>Fecha de aplicación</th>
+                <th>Fecha de Postulación</th>
                 <th>Última Actualización</th>
                 <th></th>
             </tr>
