--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -50,7 +50,7 @@
 
                     {% if is_granted(['ROLE_MENTOR','ROLE_STUDENT']) %}
                       <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Aplicaciones <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Postulaciones <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                           {% if is_granted('ROLE_STUDENT') %}
                             <li><a href="{{path('application_new')}}">Crear Nueva</a></li>
