--- a/sigi/app/Resources/views/keyword/edit.html.twig
+++ b/sigi/app/Resources/views/keyword/edit.html.twig
@@ -8,7 +8,7 @@
         <input type="submit" class="btn btn-primary btn1" role="button" value="Editar" />
     {{ form_end(edit_form) }}
 
-    <a href="{{ path('keyword_index') }}" class="btn btn-info btn2" role="button" >Listar Aplicaciones</a>
+    <a href="{{ path('keyword_index') }}" class="btn btn-info btn2" role="button" >Listar Postulaciones</a>
     {{ form_start(delete_form) }}
         <input type="submit" value="Eliminar" class="btn btn-danger btn3" role="button">
     {{ form_end(delete_form) }}
