--- a/sigi/app/Resources/views/oportunityresearch/show.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/show.html.twig
@@ -31,7 +31,7 @@
             </tr>
             <tr>
                 <th>Postulaciones:</th>
-                <td><a href="{{ path('oportunityresearch_applications', { 'id': oportunityResearch.id }) }}">{{ oportunityResearch.applications|length }}</a></td>
+                <td>{{ oportunityResearch.applications|length }} <a href="{{ path('oportunityresearch_applications', { 'id': oportunityResearch.id }) }}">(ver)</a></td>
             </tr>
             <tr>
                 <th>Público:</th>
