--- a/sigi/app/Resources/views/application/show.html.twig
+++ b/sigi/app/Resources/views/application/show.html.twig
@@ -65,7 +65,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Aceptar Postulante</h4>
+            <h4 class="modal-title" id="myModalLabel">Cancelar Postulación</h4>
           </div>
           <div class="modal-body">
             Esta acción no tiene vuelta atrás, si elimina la postulación el profesor no podrá verla y el proceso será interrumpido. ¿Desea continuar?
@@ -88,7 +88,7 @@
             <h4 class="modal-title" id="myModalLabel">Aceptar postulante</h4>
           </div>
           <div class="modal-body">
-            Esta acción no tiene vuelta atrás, una vez aceptado el postulante, este deberá aceptar la postulación también, tras lo cual los datos serán enviados al DARA quedando un regristro permanente
+            Esta acción no tiene vuelta atrás, una vez aceptado el postulante, el alumno deberá confirmar su postulación. Tras la confirmación de ambos los datos son enviados a DARA quedando formalmente inscritos los créditos de Investigación.
             ¿Esta seguro que quiere continuar?
           </div>
           <div class="modal-footer">
@@ -105,10 +105,10 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Aceptar Postulante</h4>
+            <h4 class="modal-title" id="myModalLabel">Confirmar Postulación</h4>
           </div>
           <div class="modal-body">
-            Esta acción no tiene vuelta atrás, una vez aceptada la postulación, los datos serán enviados al DARA quedando un regristro permanente
+            Esta acción no tiene vuelta atrás, una vez confirmada la postulación, los datos son enviados a DARA quedando formalmente inscritos los créditos de Investigación.
             ¿Esta seguro que quiere continuar?
           </div>
           <div class="modal-footer">
