--- a/sigi/app/Resources/views/oportunityresearch/show.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/show.html.twig
@@ -95,7 +95,7 @@
         {% if vacants > 0 %}
             <form action="{{ path('application_new') }}" method="post">
                 <input type="hidden" name="oportunityId" value="{{ oportunityResearch.Id }}">
-                <input type="submit" value="Aplicar" class="btn btn-primary btn1" role="button">
+                <input type="submit" value="Postular" class="btn btn-primary btn1" role="button">
             </form>
         {% endif %}
     {% endif %}
