--- a/sigi/app/Resources/views/application/new.html.twig
+++ b/sigi/app/Resources/views/application/new.html.twig
@@ -6,7 +6,7 @@
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" class="btn btn-primary btn1"  value="Aplicar" />
+        <input type="submit" class="btn btn-primary btn1"  value="Postular" />
     {{ form_end(form) }}
 
     <a href="{{ path('application_index') }}" class="btn btn-danger btn2" role="button" >Cancelar</a>
