--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}SIGI{% endblock %}</title>
+        <title>{% block title %}Gestión IPre{% endblock %}</title>
         {% block stylesheets %}
             <link href="{{ asset('bundles/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet"/>
             <link href="{{ asset('css/main.css') }}" rel="stylesheet"/>
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="#">SIGI</a>
+                  <a class="navbar-brand" href="#">Gestión IPre</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
