--- a/sigi/src/BackendBundle/Resources/views/Default/index.html.twig
+++ b/sigi/src/BackendBundle/Resources/views/Default/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1 ALIGN=center>Bienvenido a SIGI</h1>
-    <h4 ALIGN=center>Sistema de Investigación y Gestión de la Información</h4>
+    <h1 ALIGN=center>Bienvenido a Gestión IPre</h1>
+    <h4 ALIGN=center>Sistema de Oportunidades de Investigación en Pregrado</h4>
     <h4 ALIGN=center><a href="http://www.ing.puc.cl">Escuela de Ingeniería UC</a></h4>
 
     </br>
