agregue el arbolito y la linea al fondo de la pagina, de igual forma, esta funcionando el envio de programaciones para el 15 de cada mes y el envio de inscripciones para el primero de cada mes

--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -169,8 +169,11 @@
     <body>
 
         {% block body %}
+          
         {% endblock %}
 
+              <img src="{{ asset('imgs/background-tree.png') }}" class="bottom-tree" />
+              <img src="{{ asset('imgs/background-line.jpg') }}" class="bottom-line" />
         
         {% block javascripts %}
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>   
