se cambio facultad por Facultad/Escuela en la plataforma y Facultad/Escuela/Departamento en los label correspondientes

--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -96,8 +96,8 @@
                         <ul class="dropdown-menu">
                           <li>&nbsp;Facultades</li>
                           <li class="divider"></li>
-                          <li><a href="{{path('faculty_new')}}">Ingresar Facultad</a></li>
-                          <li><a href="{{path('faculty_index')}}">Ver Facultades</a></li>
+                          <li><a href="{{path('faculty_new')}}">Ingresar Facultad/Escuela</a></li>
+                          <li><a href="{{path('faculty_index')}}">Ver Facultades/Escuelas</a></li>
                           <li class="divider"></li>
                           <li>&nbsp;Departamentos</li>
                           <li class="divider"></li>
