--- a/sigi/app/Resources/views/department/index.html.twig
+++ b/sigi/app/Resources/views/department/index.html.twig
@@ -8,7 +8,7 @@
             <tr>
                 <th>Id</th>
                 <th>Nombre</th>
-                <th>Facultad</th>
+                <th>Facultad/Escuela</th>
                 <th></th>
                 <th></th>
             </tr>
