--- a/sigi/app/Resources/views/department/new.html.twig
+++ b/sigi/app/Resources/views/department/new.html.twig
@@ -20,7 +20,7 @@
 window.onload = function() {
 	
  	$(".js-basic-single").select2({
- 		placeholder: "Seleccione la facultad",
+ 		placeholder: "Seleccione la Facultad/Escuela",
   		allowClear: false
  	});
 
