--- a/sigi/app/Resources/views/department/show.html.twig
+++ b/sigi/app/Resources/views/department/show.html.twig
@@ -14,7 +14,7 @@
                 <td>{{ department.name }}</td>
             </tr>
             <tr>
-                <th>Facultad:&nbsp;&nbsp;</th>
+                <th>Facultad/Escuela:&nbsp;&nbsp;</th>
                 <td>{{ department.faculty.name }}</td>
             </tr>
         </tbody>
