--- a/sigi/app/Resources/views/faculty/index.html.twig
+++ b/sigi/app/Resources/views/faculty/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Facultades</h1>
+    <h1>Facultades/Escuela</h1>
 
     <table class="table table-striped">
         <thead>
@@ -37,6 +37,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('faculty_new') }}" class="btn btn-primary btn-sm" role="button">Ingresar Facultad</a>
+    <a href="{{ path('faculty_new') }}" class="btn btn-primary btn-sm" role="button">Ingresar Facultad/Escuela</a>
     
 {% endblock %}
