--- a/sigi/app/Resources/views/faculty/new.html.twig
+++ b/sigi/app/Resources/views/faculty/new.html.twig
@@ -7,14 +7,14 @@
 
 
 {% block body %}
-    <h1>Nueva Facultad</h1>
+    <h1>Nueva Facultad/Escuela</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
         <input type="submit" class="btn btn-primary btn1" value="Crear" />
     {{ form_end(form) }}
 
-    <a href="{{ path('faculty_index') }}" class="btn btn-info btn2" role="button" >Ver Facultades</a>
+    <a href="{{ path('faculty_index') }}" class="btn btn-info btn2" role="button" >Ver Facultades/Escuelas</a>
 
 
 
