--- a/sigi/app/Resources/views/oportunityresearch/new.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/new.html.twig
@@ -34,7 +34,7 @@
 	        <h4 class="modal-title" id="myModalLabel">Cursos CMD</h4>
 	      </div>
 	      <div class="modal-body">
-	        	Al tener almenos dos mentores de diferente facultad, esta oportunidad califica para ser CMD, puede seleccionar la opcion en el checkbox correspondiente
+	        	Al tener almenos dos mentores de diferente Facultades/Escuela, esta oportunidad califica para ser CMD, puede seleccionar la opcion en el checkbox correspondiente
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Gracias</button>
@@ -51,7 +51,7 @@
 	        <h4 class="modal-title" id="myModalLabel">Cursos CMD</h4>
 	      </div>
 	      <div class="modal-body">
-	        	Ya no cumple con requisitos para ser CMD, para poder volver a habilitar la opcion debe tener almenos dos mentores de diferente facultad
+	        	Ya no cumple con requisitos para ser CMD, para poder volver a habilitar la opcion debe tener almenos dos mentores de diferente Facultades/Escuela
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Gracias</button>
@@ -227,7 +227,7 @@ function alertCMDMessage()
 	var div = document.createElement('div');
 	div.innerHTML = '<div id="CMDAlert" class="alert alert-warning alert-dismissible" role="alert">'+
   		'<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>'+
-  		'<strong>Recuerde!</strong> Esta opcion solo esta disponible para oportunidades con dos o mas mentores de diferente facultad.'+
+  		'<strong>Recuerde!</strong> Esta opcion solo esta disponible para oportunidades con dos o mas mentores de diferente Facultades/Escuela.'+
   		'</div>';
 	document.getElementById("oportunity_research_cmd").parentElement.appendChild(div);
 }
