--- a/sigi/app/Resources/views/department/edit.html.twig
+++ b/sigi/app/Resources/views/department/edit.html.twig
@@ -28,7 +28,7 @@
 window.onload = function() {
 	
  	$(".js-basic-single").select2({
- 		placeholder: "Seleccione la facultad",
+ 		placeholder: "Seleccione la Facultad/Escuela",
   		allowClear: false
  	});
 
