--- a/sigi/app/Resources/views/oportunityresearch/edit.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/edit.html.twig
@@ -32,7 +32,7 @@
 	        <h4 class="modal-title" id="myModalLabel">Cursos CMD</h4>
 	      </div>
 	      <div class="modal-body">
-	        	Al tener almenos dos mentores de diferente facultad, esta oportunidad califica para ser CMD, puede seleccionar la opcion en el checkbox correspondiente
+	        	Al tener almenos dos mentores de diferentes Facultades/Escuela, esta oportunidad califica para ser CMD, puede seleccionar la opcion en el checkbox correspondiente
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Gracias</button>
@@ -49,7 +49,7 @@
 	        <h4 class="modal-title" id="myModalLabel">Cursos CMD</h4>
 	      </div>
 	      <div class="modal-body">
-	        	Ya no cumple con requisitos para ser CMD, para poder volver a habilitar la opcion debe tener almenos dos mentores de diferente facultad
+	        	Ya no cumple con requisitos para ser CMD, para poder volver a habilitar la opcion debe tener almenos dos mentores de diferente Facultad/Escuela
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Gracias</button>
