--- a/sigi/app/Resources/views/user/new.html.twig
+++ b/sigi/app/Resources/views/user/new.html.twig
@@ -83,7 +83,7 @@ function collapseJS()
     		$("#collapseMentor :input").attr("disabled", true);
     		$("#collapseOther :input").attr("disabled", true);
 
-    		beak;
+    		break;
 
 		case "ROLE_STUDENT":
     		$("#collapseAdmin").collapse('hide');
@@ -96,7 +96,7 @@ function collapseJS()
     		$("#collapseMentor :input").attr("disabled", true);
     		$("#collapseOther :input").attr("disabled", true);
 
-    		beak;
+    		break;
 
 		case "ROLE_MENTOR":
     		$("#collapseAdmin").collapse('hide');
@@ -108,7 +108,7 @@ function collapseJS()
     		$("#collapseStudent :input").attr("disabled", true);
     		$("#collapseMentor :input").attr("disabled", false);
     		$("#collapseOther :input").attr("disabled", true);
-    		beak;
+    		break;
 
 		case "ROLE_OTHER":
     		$("#collapseAdmin").collapse('hide');
@@ -121,7 +121,7 @@ function collapseJS()
     		$("#collapseMentor :input").attr("disabled", true);
     		$("#collapseOther :input").attr("disabled", false);
 
-    		beak;
+    		break;
     	}
 }
 </script>
