bug de doble windows.load arreglado

--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -173,9 +173,9 @@
         {% endblock %}
         <script type="text/javascript">
 
-window.onload = function() {
+window.addEventListener("load", function(evt) {
       document.getElementById("search-form").style.width = "115px";
-    };
+    })
 
   </script>
 
