--- a/sigi/app/Resources/views/user/new.html.twig
+++ b/sigi/app/Resources/views/user/new.html.twig
@@ -43,7 +43,7 @@
 		  </div>
 		</div>
 
-        	<input type="submit" class="btn btn-primary btn1" role="button" value="Crear" />
+        	<input type="submit" class="btn btn-primary btn1" role="button" value="Crear" onclick="return isValid();" />
     	{{ form_end(form) }}
 
     <a href="{{ path('user_index') }}" class="btn btn-info btn2" role="button">Usuarios</a>
@@ -53,6 +53,8 @@
 <script type="text/javascript">
 
 window.onload = function() {
+
+    addVerifierDigit();
 
     $(".js-basic-single").select2({
         placeholder: "Seleccione el departamento",
@@ -66,6 +68,63 @@ window.onload = function() {
     collapseJS();
 };
 
+function isValid()
+{
+    var rut = document.getElementById("user_rut").value + "-" + document.getElementById("vd").value;
+    if(!validaRut(rut))
+    { 
+        alert("Rut no valido");
+        document.getElementById("user_rut").focus();
+    } 
+    return validaRut(rut);
+}
+
+
+function addVerifierDigit()
+{
+    var t = document.createTextNode("-");
+    document.getElementById("user_rut").parentElement.appendChild(t);
+
+    var input = document.createElement("input");
+    input.type = "text";
+    input.id="vd"
+    input.className = "form-control";
+    input.style.width = "10%";
+    input.style.display = "inline";
+    input.style.marginLeft = "3px";
+    document.getElementById("user_rut").parentElement.appendChild(input);
+
+    document.getElementById("user_rut").style.width = "87%";
+    document.getElementById("user_rut").style.display = "inline";
+    document.getElementById("user_rut").style.marginRight = "3px";
+
+    document.getElementById("user_rut").parentElement.childNodes[0].style.display = "block";
+
+    if(document.getElementById("user_rut").value.length > 0)
+    {
+        input.value = dv(document.getElementById("user_rut").value);
+    }
+}
+
+
+    // Valida el rut con su cadena completa "XXXXXXXX-X"
+function validaRut(rutCompleto) 
+{
+    if (!/^[0-9]+-[0-9kK]{1}$/.test( rutCompleto ))
+        return false;
+    var tmp     = rutCompleto.split('-');
+    var digv    = tmp[1]; 
+    var rut     = tmp[0];
+    if ( digv == 'K' ) digv = 'k' ;
+    return (dv(rut) == digv );
+}
+function dv(T)
+{
+    var M=0,S=1;
+    for(;T;T=Math.floor(T/10))
+        S=(S+T%10*(9-M++%6))%11;
+    return S?S-1:'k';
+}
 
 function collapseJS()
 {
