trabajo con la recuperacion de contraseña, actualmente falta onetoone restorer con user y de ahi en adelante, push del dia

--- a/sigi/app/Resources/views/security/login.html.twig
+++ b/sigi/app/Resources/views/security/login.html.twig
@@ -27,5 +27,6 @@
 
         <button class="btn btn-default"  type="submit">login</button>
     </form>
+    <a href="{{ path('lost_password_route') }}">¿Olvidó su contraseña?</a>
     </div>
 {% endblock %}
