--- a/sigi/app/Resources/views/oportunityresearch/search.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/search.html.twig
@@ -21,79 +21,26 @@
             </a>
           </h4>
         </div>
-        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
           <div class="panel-body">
 
-            <form class="form-horizontal">
-              <div class="form-group">
-                <label for="creationDate1" class="col-sm-2 control-label">Creado después de</label>
-                <div class="col-sm-10">
-                  <input type="date" class="form-control" id="creationDate">
-                </div>
-              </div>
+            <form class="form-horizontal" method="post">
 
-              <div class="form-group">
-                <label for="creationDate2" class="col-sm-2 control-label">Creado antes de</label>
-                <div class="col-sm-10">
-                  <input type="date" class="form-control" id="creationDate">
-                </div>
-              </div>
+                {% for child in advancedForm.children %}
+                    <div class="form-group">
+                        {% if 'token' not in form_label(child) %}
+                            <label for="mentors" class="col-sm-2 control-label">{{ form_label(child) }}</label>
+                        {% endif %} 
+                        <div class="col-sm-10">
+                            {{ form_widget(child) }}
+                        </div>
+                    </div>
+                    
+                {% endfor %}    
+
               
-              <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">Nombre</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="name" placeholder="Nombre de la Oportunidad">
-                </div>
-              </div>
 
-              <div class="form-group">
-                <label for="description" class="col-sm-2 control-label">Descripción</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="description" placeholder="Descripción de la Oportunidad">
-                </div>
-              </div>
-
-              <div class="form-group">
-                <label for="modality" class="col-sm-2 control-label">Método de evaluación</label>
-                <div class="col-sm-10">
-                  <select class="form-control" id="modality">
-                      <option disabled selected value> -- seleccione uno -- </option>
-                      <option>Alfa numerico</option>
-                      <option>Nota 1-7</option>
-                    </select>
-                </div>
-              </div>
-
-              <div class="form-group">
-                <label for="vacants" class="col-sm-2 control-label">Vacantes Disponibles</label>
-                <div class="col-sm-10">
-                  <input type="number" class="form-control" id="vacants">
-                </div>
-              </div>
-
-              ///////////////////////
-              <div class="form-group">
-                <label for="keyword" class="col-sm-2 control-label">Keywords</label>
-                <div class="col-sm-10">
-                  {{ form_widget(keywordForm) }}
-                </div>
-              </div>
-
-              ///////////////////////
-              <div class="form-group">
-                <label for="prerequisites" class="col-sm-2 control-label">Prerequisitos</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="prerequisites" placeholder="Nombre de la Oportunidad">
-                </div>
-              </div>
-
-              ///////////////////////
-              <div class="form-group">
-                <label for="mentors" class="col-sm-2 control-label">Mentores</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="mentors" placeholder="Nombre de la Oportunidad">
-                </div>
-              </div>
+          </form>
             
           </div>
         </div>
@@ -166,10 +113,22 @@
 
 window.onload = function() {
 
-    $(".js-example-tokenizer").select2({
+    $(".js-tokenizer").select2({
     tags: true,
-})
+    });
+
+    setWidth();
 };
+
+function setWidth()
+{
+    var x = document.getElementsByClassName("select2-container");
+
+    for (i = 0; i<x.length; i++)
+    {
+        x[i].style.width = "100%";
+    }
+}
    </script>
 {% endblock %}
 
