menu admin enchulado

--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -129,6 +129,12 @@
                           <li class="divider"></li>
                           <li><a href="{{path('class_code_new')}}">Crear Sigla</a></li>
                           <li><a href="{{path('class_code_index')}}">Ver Siglas</a></li>
+                          <li class="divider"></li>
+                          <li><a href="{{path('deadline_index')}}">Fechas Limites</a></li>
+                          <li class="divider"></li>
+                          <li><a href="{{path('emaillist_index')}}">Email Dara</a></li>
+                          <li class="divider"></li>
+                          <li><a href="{{ url('homepage')}}{{'command-scheduler/list' }}" target="blank">Scheduler</a></li>
                         </ul>
                       </li>
                     {% endif %}
